--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "next": "15.3.2",
     "openai": "^4.103.0",
     "react": "^19.0.0",
