--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "ikigai",
   "version": "0.1.0",
   "private": true,
+  "main": "src/lib/server.ts",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server:build": "tsc",
+    "server:build:watch": "tsc --watch",
+    "server:dev": "tsx src/lib/server.ts",
+    "server:inspect": "set DANGEROUSLY_OMIT_AUTH=true && npx @modelcontextprotocol/inspector npm run server:dev",
+    "client:dev": "tsx src/lib/client.ts"
   },
   "dependencies": {
     "dotenv": "^16.5.0",
@@ -16,17 +22,25 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "@ai-sdk/openai": "^1.3.23",
+    "@inquirer/prompts": "^7.8.0",
+    "@modelcontextprotocol/sdk": "^1.13.0",
+    "ai": "^4.3.16",
+    "mongodb": "^6.18.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@modelcontextprotocol/inspector": "^0.14.3",
+    "@types/node": "^24.0.3",
+    "tsx": "^4.20.3"
   }
 }
