--- a/package.json
+++ b/package.json
@@ -15,32 +15,34 @@
     "client:dev": "tsx src/interfaces/client.ts"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.23",
+    "@inquirer/prompts": "^7.8.0",
+    "@modelcontextprotocol/sdk": "^1.13.0",
+    "ai": "^4.3.16",
     "dotenv": "^16.5.0",
     "firebase": "^12.0.0",
+    "mongodb": "^6.18.0",
     "next": "^15.4.5",
     "openai": "^4.103.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.5.0",
-    "@ai-sdk/openai": "^1.3.23",
-    "@inquirer/prompts": "^7.8.0",
-    "@modelcontextprotocol/sdk": "^1.13.0",
-    "ai": "^4.3.16",
-    "mongodb": "^6.18.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@modelcontextprotocol/inspector": "^0.14.3",
     "@tailwindcss/postcss": "^4",
+    "@types/node": "^24.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "tailwindcss": "^4",
-    "typescript": "^5",
-    "@modelcontextprotocol/inspector": "^0.14.3",
-    "@types/node": "^24.0.3",
-    "tsx": "^4.20.3"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
+    "tsx": "^4.20.3",
+    "typescript": "^5"
   }
 }
