--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.5.0",
-    "uuid": "^11.1.0",
     "react-markdown": "^10.1.0",
+    "react-simple-typewriter": "^5.0.1",
+    "uuid": "^11.1.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
