--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^6.18.0",
     "next": "^15.4.5",
     "openai": "^4.104.0",
+    "pdf2json": "^3.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
@@ -38,7 +39,8 @@
     "@eslint/eslintrc": "^3",
     "@modelcontextprotocol/inspector": "^0.14.3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^24.0.3",
+    "@types/node": "^24.3.0",
+    "@types/pdfjs-dist": "^2.10.377",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
